data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1661.wast
;; 2. **Test Case 2:** Create a `br_table` instruction with a varying number of labels, placing `unreachable` both before and after the table to verify if the trap affects the jumping behavior appropriately. \    _Constraint Checked: Correct trapping mechanism and consistent branch execution stopping._

(assert_invalid
  (module
    (func $test-unreachable-br_table (result i32)
      (unreachable)
      (block (result i32)
        (br_table 0 1 1 (i32.const 1)) (i32.const 0)
      )
    )
  )
  "type mismatch"
)